syntax = "proto3";

package server;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
// Defines the import path that should be used to import the generated package
// and the package name
option go_package = "github.com/chenhaonan-eth/dao/proto;server";

// 定义swagger内容
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info : {title : "Dao swagger";
version : "V1.0";
}
;
schemes : HTTP;
}
;

message FturesFoewignRequest { string symbol = 1; }
message SocialFinancingStockResponse {
  repeated SocialFinancingStock results = 1;
}
message SocialFinancingStock {
  string date = 1;        //时间
  string ndbab = 2;       //其中-未贴现银行承兑汇票
  string entrustloan = 3; //其中-委托贷款
  string forcloan = 4;    //其中-委托贷款外币(折合人民币)
  string rmblaon = 5;     //其中-人民币贷款
  string bibae = 6;       //其中-企业债券
  string tiosfs = 7;      //社会融资规模增量(亿元)/存量
  string sfinfe = 8;      //其中-非金融企业境内股票融资
  string trustloan = 9;   //其中-信托贷款
  string asset_backed_securities = 10; //存款类金融机构资产支持证券
  string loans_written_off = 11;       //贷款核销
  string government_bonds = 12;        //政府债券
  string ndbabgrowthrate = 13;         //增速（%）
  string entrustloangrowthrate = 14;
  string forcloangrowthrate = 15;
  string rmblaongrowthrate = 16;
  string bibaegrowthrate = 17;
  string tiosfsgrowthrate = 18;
  string sfinfegrowthrate = 19;
  string trustloangrowthrate = 20;
  string asset_backed_securitiesgrowthrate = 21;
  string loans_written_offgrowthrate = 22;
  string government_bondsgrowthrate = 23;
}

// 外盘期货交易
message FturesFoewignResponse { repeated FturesFoewign results = 1; }
message FturesFoewign {
  string date = 1;   //交易日
  string symbol = 2; //品种
  string open = 3;   //开盘价
  string high = 4;   //最高价
  string low = 5;    //最低价
  string lose = 6;   //收盘价
  string volume = 7; //成交量
}

message PpiRequest { string country = 1; }
message PpiResponse { repeated Ppi results = 1; }
message Ppi {
  string date = 1;
  string country = 2;
  string ppi = 3;
}

message GdpRequest { string country = 1; }
message GdpResponse { repeated Gdp results = 1; }
message Gdp {
  string date = 1;
  string country = 2;
  string gdp = 3;
}

message PmiRequest { string country = 1; }
message PmiResponse { repeated Pmi results = 1; }
message Pmi {
  string date = 1;
  string country = 2;
  string pmi = 3;
}

// 中美国债
message BondZhUsRateResponse { repeated BondZhUsRate results = 1; }
message BondZhUsRate {
  string date = 1;
  double cN2Years = 2;     //中国国债收益率2年
  double cN5Years = 3;     //中国国债收益率5年
  double cN10Years = 4;    //中国国债收益率10年
  double cN30Years = 5;    //中国国债收益率30年
  double cN10_2Years = 6;  //中国国债收益率10年-2年
  double uS2Years = 7;     //美国国债收益率2年
  double uS5Years = 8;     //美国国债收益率5年
  double uS10Years = 9;    //美国国债收益率10年
  double uS30Years = 10;   //美国国债收益率30年
  double uS10_2Years = 11; //美国国债收益率10年-2年
}

service Greeter {

    // 中美国债2、5、10、30年收益率
    rpc GetBondZhUsRate(google.protobuf.Empty) returns (BondZhUsRateResponse) {
  option (google.api.http) = {
    get : "/v1/macroscopic/bond_zh_us_rate"
  };
}
  // 社会融资存量
  rpc GetSocialFinancingStock(google.protobuf.Empty)
      returns (SocialFinancingStockResponse) {
    option (google.api.http) = {
      get : "/v1/macroscopic/social_financing_stock"
    };
  }

  // 期货 伦铜:CAD
  rpc GetFuturesForeignHist(FturesFoewignRequest)
      returns (FturesFoewignResponse) {
    option (google.api.http) = {
      get : "/v1/macroscopic/FuturesForeignHist/{symbol}"
    };
  }

  // PPI
  rpc GetPpi(PpiRequest) returns (PpiResponse) {
    option (google.api.http) = {
      get : "/v1/macroscopic/ppi/{country}"
    };
  }

  // GDP
  rpc GetGdp(GdpRequest) returns (GdpResponse) {
    option (google.api.http) = {
      get : "/v1/macroscopic/gdp/{country}"
    };
  }

  // PMI
  rpc GetPmi(PmiRequest) returns (PmiResponse) {
    option (google.api.http) = {
      get : "/v1/macroscopic/pmi/{country}"
    };
  }
}
